# sr-ros-interface-ethercat

./: .bzrignore  .gitignore  CODEOWNERS  README.md  aws.yml  changelog.tex  jenkins.yml  repository.rosinstall  rosdep.yaml  shippable.yml  stack.xml
shadow_robot_ethercat/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_edc_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  motor_board_effort_controllers.yaml  motor_board_effort_controllers_ff_and_th.yaml  package.xml  sr_edc_calibration_controllers.yaml  sr_edc_controller_manager.launch  sr_edc_default_controllers.launch  sr_edc_effort_controllers.launch  sr_edc_effort_controllers.yaml  sr_edc_joint_position_controllers.yaml  sr_edc_joint_position_controllers_PWM.yaml  sr_edc_joint_position_controllers_all_backup.yaml  sr_edc_joint_velocity_controllers.yaml  sr_edc_mixed_position_velocity_controllers.launch  sr_edc_mixed_position_velocity_joint_controllers.yaml  sr_edc_position_controllers.launch  sr_edc_velocity_controllers.launch
sr_edc_controller_configuration/scripts/: controllers_to_diagnostics.py  joints_to_diagnostics.py
sr_edc_ethercat_drivers/: CHANGELOG.rst  CMakeLists.txt  ethercat_device_plugin.xml  mainpage.dox  manifest.xml  package.xml
sr_edc_ethercat_drivers/examples/: send_targets.cpp
sr_edc_ethercat_drivers/include/sr_edc_ethercat_drivers/: motor_trace_buffer.h  sr06.h  sr08.h  sr09.h  sr0x.h  sr10.h  sr_edc.h  sr_edc_muscle.h  srbridge.h
sr_edc_ethercat_drivers/scripts/: flash_all_motors.sh
sr_edc_ethercat_drivers/src/: motor_trace_buffer.cpp  sr06.cpp  sr08.cpp  sr09.cpp  sr0x.cpp  sr10.cpp  sr_edc.cpp  sr_edc_muscle.cpp  srbridge.cpp
sr_edc_ethercat_drivers/test/: test_clock_resolution.cpp
sr_edc_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  diagnostic_analyzer.yaml  hand_ros_control_robot_params.xml  launch_config.py  load_hand_parameters.xml  mainpage.dox  manifest.xml  package.xml  sr_edc.launch  sr_edc.machine  sr_edc_bimanual.launch  sr_edc_bimanual_ros_control.launch  sr_edc_ros_control.launch  sr_hand.launch
sr_edc_launch/mappings/default_mappings/: README.md  lh_E_v1.yaml  lh_E_v3.yaml  lh_E_v4.yaml  lh_E_v5.yaml  mapping_5.yaml  mapping_lh_ethercat.yaml  mapping_rh_ethercat.yaml  rh_E_v1.yaml  rh_E_v2.yaml  rh_E_v3.yaml  rh_E_v3_no_lf.yaml  rh_E_v3_no_mf_rf_lf.yaml  rh_E_v4.yaml  rh_E_v5.yaml  rh_extra_lite.yaml  rh_extra_lite_v1.yaml  rh_lite.yaml  rh_lite_v1.yaml  rh_muscle.yaml  rh_muscle_v1.yaml  sensor_to_joint.yaml
sr_edc_launch/mappings/lh/: load_motor_mappings  load_muscle_mappings
sr_edc_launch/mappings/rh/: load_motor_mappings  load_muscle_mappings
sr_edc_launch/scripts/: launch_config.py
sr_edc_muscle_tools/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sr_external_dependencies/: CHANGELOG.rst  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml  tested_version.yaml
sr_external_dependencies/include/sr_external_dependencies/: types_for_external.h
sr_external_dependencies/include/sr_external_dependencies/provisional/: 0220_palm_edc_ethercat_protocol.h  0230_palm_edc_ethercat_protocol.h  (+2 more)
sr_external_dependencies/released/released_firmware/: simplemotor.hex
sr_external_dependencies/released_firmware/: simplemotor.hex  simplemotor_2148.hex
sr_external_dependencies/scripts/: make_release.sh  update_header.sh  update_provisional_headers.sh  update_released_header.sh
sr_robot_lib/: .catkin_lint_ignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
sr_robot_lib/config/: calibration.yaml  friction_compensation.yaml  motor_data_polling.yaml  sensor_data_polling.yaml
sr_robot_lib/examples/: compute_joint_0_target.py  test_interpolation.py
sr_robot_lib/include/sr_robot_lib/: MST.hpp  UBI0.hpp  biotac.hpp  generic_tactiles.hpp  generic_updater.hpp  motor_data_checker.hpp  motor_updater.hpp  muscle_updater.hpp  pwl_interp_2d_scattered.hpp  r8lib.hpp  sensor_updater.hpp  shadow_PSTs.hpp  sr_hand_lib.hpp  sr_joint_motor.hpp  sr_motor_hand_lib.hpp  sr_motor_robot_lib.hpp  sr_muscle_hand_lib.hpp  sr_muscle_robot_lib.hpp  sr_robot_lib.hpp  tactile_sensors.hpp
sr_robot_lib/launch/: sr_hand_lib.launch  sr_hand_lib.test
sr_robot_lib/python_lib/: etherCAT_hand_lib.py
sr_robot_lib/python_lib/sr_robot_lib/: etherCAT_hand_lib.py
sr_robot_lib/src/: MST.cpp  UBI0.cpp  biotac.cpp  generic_tactiles.cpp  generic_updater.cpp  motor_data_checker.cpp  motor_updater.cpp  muscle_updater.cpp  pwl_interp_2d_scattered.cpp  r8lib.cpp  sensor_updater.cpp  shadow_PSTs.cpp  shepard_interp_2d.cpp  sr_hand_lib.cpp  sr_motor_hand_lib.cpp  sr_motor_robot_lib.cpp  sr_muscle_hand_lib.cpp  sr_muscle_robot_lib.cpp  sr_robot_lib.cpp  tactile_sensors.cpp  test_interpolation.cpp
sr_robot_lib/src/self_test/: sr_self_test.cpp  sr_test_runner.cpp
sr_robot_lib/test/: motor_updater_test.cpp  sr_hand_lib.test  test_robot_lib.cpp
sr_robot_lib/test/config/: calibration.yaml  new_calibration.yaml
sr_tactile_sensor_controller/: CMakeLists.txt  package.xml  sr_biotac_tactile_sensor_controller.yaml  sr_pst_tactile_sensor_controller.yaml  sr_tactile_sensor.launch  sr_tactile_sensor_plugin.xml
sr_tactile_sensor_controller/include/sr_tactile_sensor_controller/: copyright_exclusions.cfg  sr_biotac_tactile_sensor_controller.hpp  sr_biotac_tactile_sensor_publisher.hpp  sr_mst_tactile_sensor_publisher.hpp  sr_pst_tactile_sensor_controller.hpp  sr_pst_tactile_sensor_publisher.hpp  sr_tactile_sensor_controller.hpp  sr_tactile_sensor_publisher.hpp  sr_ubi_tactile_sensor_controller.hpp  sr_ubi_tactile_sensor_publisher.hpp
sr_tactile_sensor_controller/scripts/: biotac_republisher
sr_tactile_sensor_controller/src/: copyright_exclusions.cfg  sr_biotac_tactile_sensor_controller.cpp  sr_biotac_tactile_sensor_publisher.cpp  sr_mst_tactile_sensor_publisher.cpp  sr_pst_tactile_sensor_controller.cpp  sr_pst_tactile_sensor_publisher.cpp  sr_tactile_sensor_controller.cpp  sr_tactile_sensor_publisher.cpp  sr_ubi_tactile_sensor_controller.cpp  sr_ubi_tactile_sensor_publisher.cpp
(+14 files in other folders)
