<package>
  <name>shadow_robot_ethercat</name>
  <version>1.4.0</version>
  <description>This stack contains the drivers and the controllers for Shadow Robot's EtherCAT Hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/shadow_robot_ethercat</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>


  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>
  <author>Mark Pitchless</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_external_dependencies</run_depend>
  <run_depend>sr_edc_ethercat_drivers</run_depend>
  <run_depend>sr_edc_controller_configuration</run_depend>
  <run_depend>sr_edc_launch</run_depend>
  <run_depend>sr_edc_muscle_tools</run_depend>
  <run_depend>sr_robot_lib</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
