<package>
  <name>sr_edc_controller_configuration</name>
  <version>1.2.0</version>
  <description>contains the different launch files for Shadow Robot hand controllers. The actual configuration files are stored in the sr_config stack.</description>
  <maintainer email=" ugo@shadowrobot.com ">Ugo Cupcic </maintainer>
  <maintainer email="">contact@shadowrobot.com</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_controller_configuration</url>
  <!-- <url type="bugtracker"></url> -->

  <author email=" ugo@shadowrobot.com ">Ugo Cupcic </author>
  <author>contact@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>sr_ethercat_hand_config</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>robot_mechanism_controllers</run_depend>
  <run_depend>sr_ethercat_hand_config</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pr2_controller_manager</test_depend> -->
  <!-- <test_depend>robot_mechanism_controllers</test_depend> -->
  <!-- <test_depend>sr_ethercat_hand_config</test_depend> -->

</package>