<package>
  <name>sr_edc_controller_configuration</name>
  <version>1.3.3</version>
  <description>contains the different launch files for Shadow Robot hand controllers. The actual configuration files are stored in the sr_config stack.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_controller_configuration</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>

  <author>Ugo Cupcic</author>
  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>sr_ethercat_hand_config</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>

</package>
