<package>
  <name>sr_edc_ethercat_drivers</name>
  <version>1.2.0</version>
  <description>A package implementing a ROS interface for the etherCAT Shadow Robot Dextrous Hand.</description>
  <maintainer email="">Yann Sionneau</maintainer>
  <maintainer email=" ugo@shadowrobot.com">Ugo Cupcic </maintainer>
  <maintainer email="">software@shadowrobot.com</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_ethercat_drivers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Yann Sionneau</author>
  <author email=" ugo@shadowrobot.com">Ugo Cupcic </author>
  <author>software@shadowrobot.com</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_lib</build_depend>
  <build_depend>ethercat_hardware</build_depend>
  <build_depend>sr_external_dependencies</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_lib</run_depend>
  <run_depend>ethercat_hardware</run_depend>
  <run_depend>sr_external_dependencies</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sr_robot_lib</test_depend> -->
  <!-- <test_depend>ethercat_hardware</test_depend> -->
  <!-- <test_depend>sr_external_dependencies</test_depend> -->

<export>
    <ethercat_hardware plugin="${prefix}/ethercat_device_plugin.xml"/>
</export>

</package>