<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_edc_ethercat_drivers</name>
  <version>1.4.0</version>
  <description>A package implementing a ROS interface for the etherCAT Shadow Robot Dextrous Hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_ethercat_drivers</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>


  <author>Ugo Cupcic</author>
  <author>Yann Sionneau</author>
  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_robot_lib</build_depend>
  <build_depend>ros_ethercat_hardware</build_depend>
  <build_depend>sr_external_dependencies</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>binutils</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_robot_lib</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>sr_external_dependencies</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>binutils</run_depend>

  <!-- Dependencies needed only for running tests. -->

  <export>
    <ros_ethercat_hardware plugin="${prefix}/ethercat_device_plugin.xml"/>
  </export>

</package>
