<package>
  <name>sr_edc_launch</name>
  <version>1.4.0</version>
  <description>Package with launch files to start the needed nodes for the Shadow Robot EtherCAT hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_launch</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>

  <author>Ugo Cupcic</author>
  <author>Yann Sionneau</author>
  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_ethercat_hand_config</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>sr_mechanism_controllers</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>ros_ethercat_loop</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>sr_description</run_depend>


</package>
