<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_edc_launch</name>
  <version>1.4.0</version>
  <description>Package with launch files to start the needed nodes for the Shadow Robot EtherCAT hand.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_edc_launch</url>
  <url type="website">http://www.shadowrobot.com/products/dexterous-hand/</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface-ethercat</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface-ethercat/issues</url>

  <author>Ugo Cupcic</author>
  <author>Yann Sionneau</author>
  <author>Toni Oliver</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_hand_config</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>sr_mechanism_controllers</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>ros_ethercat_loop</run_depend>
  <run_depend>ros_ethercat_hardware</run_depend>
  <run_depend>sr_description</run_depend>
  <run_depend>sr_utilities_common</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <!-- Adding sr_tactile_sensor_controller as suggested by catkin_lint
       would generate a circular dependency
  <run_depend>sr_tactile_sensor_controller</run_depend>
  -->

</package>
