<package>
  <name>sr_edc_muscle_tools</name>
  <version>1.2.0</version>
  <description>sr_edc_muscle_tools - Usefull commands and basic demo for the ethercat muscle hand.</description>
  <maintainer email="">Shadow Hand</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_edc_muscle_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Shadow Hand</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sr_hand</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sr_hand</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sr_hand</test_depend> -->

</package>